Update stream URL

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
         <div class="camera-x"><div v-el="cameraX" class="indicator"></div></div>
         <div class="camera-y"><div v-el="cameraY" class="indicator"></div></div>
         <div v-el="camera" class="camera">
-            <img v-el="stream" class="stream" src="http://apollo.lyt.io:9000/?action=stream" alt="">
+            <img v-el="stream" class="stream" src="http://robot.lyt.io:9000/?action=stream" alt="">
             <div class="dpad camera-controls" v-show="!touchControls">
                 <button class="btn dpad-up" v-el="cameraUp">W</button>
                 <button class="btn dpad-left" v-el="cameraLeft">A</button>
