Add test commit to see if auto deployment is working.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body ontouchstart>
+<h1>TEST Commit</h1>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1">
     <defs>
         <symbol id="icon-arrow-down" viewBox="0 0 1024 1024">
